--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,8 @@ allprojects {
     }
 
     dependencies {
+        compile 'com.squareup.retrofit2:retrofit:2.4.0'
+        compile 'com.squareup.retrofit2:converter-gson:2.4.0'
         compile 'commons-codec:commons-codec:1.11'
         compile 'commons-io:commons-io:2.6'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
