--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,7 @@ allprojects {
         compile 'com.dropbox.core:dropbox-core-sdk:3.0.8'
         compile 'commons-codec:commons-codec:1.11'
         compile 'commons-io:commons-io:2.6'
+        compile 'com.googlecode.json-simple:json-simple:1.1.1'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
